# data-analysis

./: ChangeLog.md  README.md  data-analysis.cabal
src/: DataAnalysis.hs
src/DataAnalysis/: Decode.hs  Encode.hs  Lens.hs  MaxSample.hs  Mean.hs  MinSample.hs  Range.hs  Sortable.hs  Type.hs
src/DataAnalysis/Class/: FromSample.hs  HasMaxSample.hs  HasMinSample.hs
src/DataAnalysis/Decode/: Aeson.hs  Cassava.hs  Class.hs
src/DataAnalysis/Encode/: Aeson.hs  Class.hs
src/DataAnalysis/Groupable/: Class.hs
src/DataAnalysis/Sortable/: Class.hs  Vector.hs
src/DataAnalysis/Type/: Encoding.hs
